<resources>
    <string name="app_name">"ПредПоЧитай"</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="error_loading_people">There seems to have been some error.</string>
    <string name="default_loading_people">Press the button to load people!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Новости</string>
    <string name="title_dashboard">Чат</string>
    <string name="title_notifications">Поиск книг</string>
    <string name="title_read">ПредПоЧитай</string>
    <string name="title_contact">Контакты</string>
    <string name="title_book">Продлить книгу</string>
    <string name="title_modils">О приложении</string>
    <string name="title_setting">Настройки</string>
    <string name="title_reference">О нас</string>
    <string name="ref">В 1973 г. под руководством Центральной городской библиотеки произошло объединение 15 библиотек в Централизованную библиотечную систему. В настоящее время ЦБС г.Улан-Удэ состоит из 18 библиотек – Центральной городской библиотеки им. И.К.Калашникова и 17 библиотек-филиалов. Современные муниципальные библиотеки – центры информации и досуга, интеллектуального развития и общения, правовой и социальной помощи. Ежегодно библиотеки ЦБС г.Улан-Удэ обслуживают около 60 тысяч пользователей, предоставляют комплекс библиотечно-информационных и сервисных услуг индивидуальным пользователям и организациям в локальном и удаленном режимах, создают корпоративные электронные ресурсы. Единый фонд составляет около 400 тысяч единиц хранения. В сети МАУ ЦБС г.Улан-Удэ функционируют профильные библиотеки: семейного чтения, эколого-краеведческая, эстетическая, а также носящие имена народных писателей Бурятии. Вас ждут уютные залы обслуживания читателей, Вам окажут квалифицированную помощь в выборе книг приветливые хозяйки библиотек. К Вашим услугам универсальный фонд книг и журналов по всем отраслям знаний, которые могут удовлетворить самые разнообразные и прихотливые запросы.</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="about_us">О нас \n Доброго времени суток, друзья!
Вас приветствует городская библиотека имени Исая Калашникова и не только. У нас есть ещё 17 филиалов по всему городу, где вам всегда рады. Все вместе мы – ЦБС (централизованная библиотечная система) города Улан-Удэ.
Зачем нужна библиотека в начале 21 века? Наши сотрудники всегда рады помочь вам, к вашим услугам тысячи книг и журналов, в том числе и очень редких.
Здесь мы готовы создать лучшие условия для получения знаний, здесь всегда будет поощряться творчество, мы будем стремиться создать уютную атмосферу для свободного общения и рождения новых идей.
Мы любим наших читателей и всегда рады видеть вас в стенах наших библиотек.</string>


</resources>
