<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/menu_contact"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/title_contact" />
    <item
        android:id="@+id/menu_book"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/title_book" />
    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/title_setting"
        />
    <item
        android:id="@+id/menu_reference"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/title_reference" />
    <item
        android:id="@+id/menu_mobils"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/title_modils" />


</menu>
